Fix design bug: Add minimal padding to icon blocks to prevent text from hitting edge on mobile devices

--- a/app/assets/stylesheets/application/components/iconblock.scss
+++ b/app/assets/stylesheets/application/components/iconblock.scss
@@ -50,7 +50,7 @@
 
 .circle-icon-outer {
     display: flex;
-    padding: 2em 0 3em;
+    padding: 2em 1em 3em;
     align-items: center;
 
     &.wide {
